fixed layout issues

--- a/app/assets/stylesheets/page.css.sass
+++ b/app/assets/stylesheets/page.css.sass
@@ -188,9 +188,14 @@ footer
 div.field_with_errors
   display: inline
 
+h1.first_head,
+h2.first_head,
+h3.first_head
+  margin-top: 0px
+
 #main_content
   float: left
-  width: 530px
+  width: 460px
 
 // Welcome Page
 p.welcome
